<resources>
    <string name="app_name">Programming Language</string>
    <string name="adapter_language_list_logo_desc">Logo Item</string>
    <string name="language_name">Language Name</string>
    <string name="language_logo">Language logo</string>
    <string name="detail_title">Description</string>
    <string name="menu_main_about">About</string>
    <string name="about_owner_display_picture">Owner Display Picture</string>
    <string name="about_owner_name">Kadek Laba Subagia</string>
    <string name="about_owner_name_label">Owner Name</string>
    <string name="about_owner_email_label">Owner Email</string>
    <string name="about_owner_email">labasubagia22@gmail.com</string>
    <string name="about_owner_contact">Contact</string>
    <string name="language_creator">Creator</string>
    <string name="language_release_year">Release Year</string>
</resources>
