<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_language_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/language_logo"
            tools:src="@android:color/darker_gray" />

        <TextView
            style="@style/Text.Subtitle"
            android:text="@string/language_name"
            android:gravity="center"/>

        <TextView
            style="@style/Text.Black"
            android:id="@+id/tv_language_name"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/language_name"
            android:textSize="25sp" />

        <TextView
            style="@style/Text.Subtitle"
            android:text="@string/language_creator"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_language_creator"
            style="@style/Text.Black"
            android:text="@string/language_creator"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            style="@style/Text.Subtitle"
            android:text="@string/language_release_year"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_language_release_year"
            style="@style/Text.Black"
            android:text="@string/language_release_year"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />


        <TextView
            style="@style/Text.Subtitle"
            android:gravity="center"
            android:text="@string/detail_title" />

        <TextView
            android:id="@+id/tv_language_detail"
            style="@style/Text.Content"
            />

    </LinearLayout>

</ScrollView>